# ra-pixelart-scale

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
shaders/: README.md  index.json  scalefx-3x-hybrid.slangp  scalefx-3x-old.slangp  scalefx-3x.slangp  scalefx-9x-old.slangp  stock.slang  xbrz-2x.slangp  xbrz-3x.slangp  xbrz-5x.slangp  xbrz-6x.slangp  xbrz-freescale-multipass.slangp  xbrz-freescale.slangp
shaders/edge-smoothing/scalefx/shaders/: scalefx-pass0.slang  scalefx-pass4-hybrid.slang
src/: index.json  main.rs
